# stock

./: .env.example  .gitignore  CLAUDE.md  CURRENT_TASK.md  DIFFICULTY.md  FINISHED_TASK.md  PREPARED_TASK.md  TASK.md  pyproject.toml  task.md  tonight_briefing.md  tonight_prompt.txt  tonight_prompt_backup_20260327_222305.txt  tonight_prompt_done.txt
.claude/rules/: coding.md  (+6 more)
TASK_ARCHIVE/: 2026-03.md
agents/: SNS매니저.md  뉴스분석가.md  리서치어시스턴트.md  시장분석가.md  아티클작성가.md  팀장.md
config/: content_config.yaml  market_config.yaml  news_sources.yaml  ontology_config.yaml  regime_sizing.yaml  settings.yaml  sns_config.yaml
docs/: features.md
scripts/: backfill_sentiment.py  benchmark_geoinvest.py  briefing_server.py  classify_news.py  collect_and_classify.py  collect_news.py  deep_analysis.py  earn_reporter.py  export_company.py  export_nvda.py  export_sp500_top20.py  extract_facts.py  fetch_historical_prices.py  fetch_index_universe.py  fix_issue_entity_ids.py  generate_briefing.py  generate_dashboard.py  generate_naver_html.py  generate_signal_report.py  generate_timeline.py  generate_x_post.py  health_check.py  iv_sigma_report.py  migrate_geoinvest.py  news_daemon.py  news_timeline.py  ontology_io.py  publish_helper.py  review_entities.py  run_briefing.sh  run_workflow.py  seed_ai_chips_war.py  seed_bitcoin_issue.py  seed_imec_issue.py  seed_iran_issue.py  seed_overnight_expansion.py  seed_stock_issues.py  seed_tariff_war.py  send_morning_email.py  story_io.py  (+6 more)
src/: __init__.py
tests/: conftest.py  test_email_graceful.py  test_news_collectors.py  test_rss_collector.py
(+586 files in other folders)
