[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-rich-project"
version = "0.1.0"
description = "한국/미국 주식 시장 분석 + AI 콘텐츠 생성 + SNS 자동 게시 플랫폼"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # 데이터 수집
    "pykrx>=1.0.45",
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",

    # 분석
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b1",

    # AI
    "anthropic>=0.40.0",

    # SNS
    "tweepy>=4.14.0",
    "instagrapi>=2.1.2",

    # 콘텐츠 생성
    "jinja2>=3.1.3",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "Pillow>=10.2.0",

    # 인프라
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "APScheduler>=3.10.4",
    "sqlalchemy>=2.0.25",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
